--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,10 @@
   </li>
 </ul>
 
+<p>
+  <ngb-alert [dismissible]="false">
+    <strong>Warning!</strong> Better check yourself, you're not looking too good!!.
+  </ngb-alert>
+</p>
+
 <router-outlet></router-outlet>
